Improved the solution with Virtual threads (#3)
* Improved the solution with Virtual threads
* Improving a bit the syntax